search with categories options to filter

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
+    "mongoose-paginate-v2": "^1.8.3",
     "uuid": "^10.0.0"
   }
 }
