--- a/.gitignore
+++ b/.gitignore
@@ -103,7 +103,7 @@ dist
 # vuepress v2.x temp and cache directory
 .temp
 .cache
-
+package-lock.json
 # Docusaurus cache and generated files
 .docusaurus
 
