--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "mongoose-paginate-v2": "^1.8.3",
-    "uuid": "^10.0.0",
-    "twitter-api-v2": "1.18.0"
+    "twitter-api-v2": "^1.18.1",
+    "uuid": "^10.0.0"
   }
 }
