--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mongoose-paginate-v2": "^1.8.3",
     "uuid": "^10.0.0",
     "axios": "^1.6.2",
-    "oauth-1.0a": "^2.2.6"
+    "oauth-1.0a": "^2.2.6",
+    "node-fetch": "^3.3.2"
   }
 }
